<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_menu_clean_terminal"
        android:title="@string/menu_clean"
        app:showAsAction="never" />

    <item
        android:id="@+id/ic_menu_disconnect"
        android:icon="@drawable/ic_menu_disconnect"
        android:title="@string/menu_disconnect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_menu_connect"
        android:icon="@drawable/ic_menu_connect"
        android:title="@string/menu_connect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_menu_copy"
        android:title="@string/menu_copy_terminal" />

    <item
        android:id="@+id/ic_menu_save_log"
        android:title="@string/menu_save_log" />
</menu>